--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,4 @@
-# Build stage
-FROM node:20.9.0-alpine AS builder
+FROM node:20.9.0-alpine
 
 WORKDIR /usr/src/app
 
@@ -12,28 +11,6 @@ COPY . .
 
 RUN npm install
 
-RUN npm run build
+EXPOSE 3000
 
-# Production stage - serve with nginx
-FROM nginx:alpine
-
-COPY --from=builder /usr/src/app/dist /usr/share/nginx/html
-
-# Create nginx config for SPA routing
-RUN echo 'server { \
-  listen 80; \
-  server_name _; \
-  root /usr/share/nginx/html; \
-  index index.html; \
-  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ { \
-    expires 1y; \
-    add_header Cache-Control "public, immutable"; \
-  } \
-  location / { \
-    try_files $uri $uri/ /index.html; \
-  } \
-}' > /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
