--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
     "production": "NODE_ENV=production",
     "setup": "node src/setup/setup.js",
     "upgrade": "node src/setup/upgrade.js",
-    "reset": "node src/setup/reset.js"
+    "reset": "node src/setup/reset.js",
+    "test": "jest --coverage",
+    "test:integration": "jest --config jest.integration.config.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.509.0",
