--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,3 @@
-# Backend URL - Update with your actual backend EB domain
-VITE_BACKEND_SERVER=http://YOUR_BACKEND_EB_DOMAIN/
-VITE_FILE_BASE_URL=http://YOUR_BACKEND_EB_DOMAIN/
-PROD=true
+VITE_FILE_BASE_URL = 'https://erp-crm-backend-dtwiqq6p6q-uc.a.run.app/'
+VITE_BACKEND_SERVER = 'https://erp-crm-backend-dtwiqq6p6q-uc.a.run.app/'
+PROD = true
