--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-VITE_FILE_BASE_URL="https://erp-crm-backend-dtwiqq6p6q-uc.a.run.app/"
-VITE_BACKEND_SERVER="https://erp-crm-backend-dtwiqq6p6q-uc.a.run.app/"
+VITE_FILE_BASE_URL="https://erp-crm-mern-331764159612.us-central1.run.app/"
+VITE_BACKEND_SERVER="https://erp-crm-mern-331764159612.us-central1.run.app/"
 PROD=true
