--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20.9.0-alpine
+FROM node:20.9.0-alpine AS builder
 
 WORKDIR /usr/src/app
 
@@ -6,7 +6,6 @@ RUN npm install -g npm@10.2.4
 
 COPY package*.json ./
 COPY vite.config.js ./
-
 COPY . .
 
 # Force correct .env
@@ -15,11 +14,22 @@ RUN rm -f .env && \
     echo 'VITE_BACKEND_SERVER="https://erp-crm-mern-331764159612.us-central1.run.app/"' >> .env && \
     echo 'VITE_DEV_REMOTE="remote"' >> .env
 
-# Verify .env
-RUN echo "=== .env content ===" && cat .env
+RUN cat .env
 
 RUN npm install
 
+# Build for production - this bakes env vars into the bundle
+RUN npm run build
+
+# Production stage
+FROM node:20.9.0-alpine
+
+WORKDIR /usr/src/app
+
+RUN npm install -g serve
+
+COPY --from=builder /usr/src/app/dist ./dist
+
 EXPOSE 8080
 
-CMD ["sh", "-c", "npm run dev -- --host 0.0.0.0 --port ${PORT:-8080}"]
+CMD ["sh", "-c", "serve -s dist -l ${PORT:-8080}"]
